# CppGameEngine

./: CMakeLists.txt
Empty/: EmptyApplication.cpp
Framework/Common/: BaseApplication.cpp  BaseApplication.hpp  GraphicsManager.hpp  main.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp
Platform/Linux/: helloengine_xcb  helloengine_xcb.c
Platform/Windows/: helloengine_win.c
